[tool.poetry]
name = "Haru"
version = "0.1.0"
description = "Higher level aio subprocess protocol impl"
authors = ["Nova <mooncell07@proton.me>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.pytest.ini_options]
asyncio_mode = "strict"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pytest-asyncio = "^0.17.2"
black = "^22.1.0"
mypy = "^0.931"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
